app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-api
spec:
  selector:
    app: java-api
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
